--- a/src/vois/vuetify/palettePickerExTest.ipynb
+++ b/src/vois/vuetify/palettePickerExTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e78d370",
+   "id": "3e34f125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,15 +17,20 @@
     "def onchange(colors,interpolate):\n",
     "    with output:\n",
     "        print(colors,interpolate)\n",
+    "        \n",
+    "def onchangeOpacity(value):\n",
+    "    with output:\n",
+    "        print(value)\n",
+    "        \n",
     "\n",
-    "p = palettePickerEx(width=150, value='Turbo', interpolate=False, show_interpolate_switch=False, clearable=False, onchange=onchange)\n",
+    "p = palettePickerEx(width=250, value='Turbo', interpolate=False, show_interpolate_switch=False, clearable=False, onchange=onchange, onchangeOpacity=onchangeOpacity)\n",
     "p.draw()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "987c7043",
+   "id": "1b2c434a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b34115c",
+   "id": "ce29fb7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c851ab42",
+   "id": "6c5f9058",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,15 +61,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dbed469",
+   "id": "cef78142",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p.opacity"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8fe6c4",
+   "id": "f168d4ca",
    "metadata": {},
    "outputs": [],
    "source": []
