--- a/src/vois/vuetify/multiSwitchTest.ipynb
+++ b/src/vois/vuetify/multiSwitchTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "65401319",
+   "execution_count": 1,
+   "id": "f002885e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0fff5e2a7554412aee938371d5cc9c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Html(children=['Search in:'], class_='pa-0 ma-0 mt-2 mr-2', layout=None, tag='div'), Row(childr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d0acd52463114e9eadfd848141a51e8e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run multiSwitch.py\n",
     "\n",
@@ -29,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff4408b2",
+   "id": "0c26e9e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a92ec839",
+   "id": "980354da",
    "metadata": {},
    "outputs": [],
    "source": []
