Added dblclick event to multiSwitch widget

--- a/src/vois/vuetify/multiSwitchTest.ipynb
+++ b/src/vois/vuetify/multiSwitchTest.ipynb
@@ -2,39 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f002885e",
+   "execution_count": null,
+   "id": "264c7ccc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0fff5e2a7554412aee938371d5cc9c2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Html(children=['Search in:'], class_='pa-0 ma-0 mt-2 mr-2', layout=None, tag='div'), Row(childr…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0acd52463114e9eadfd848141a51e8e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run multiSwitch.py\n",
     "\n",
@@ -46,7 +17,7 @@
     "        print(value)\n",
     "\n",
     "\n",
-    "t = multiSwitch([True, True, False], ['Title', 'Abstract', 'Keywords'],\n",
+    "t = multiSwitch([True, True, False], ['Title', 'Abstract', 'Keywords'], managedblclick=True,\n",
     "                tooltips=['Activate the search on paper title','Activate the search on paper abstract','Activate the search on paper keywords'], \n",
     "                onchange=onchange, row=True, width=90, justify='start', color='blue', rounded=False, outlined=True,\n",
     "                colorselected='#FFA300', colorunselected='#aaaaaa')\n",
@@ -58,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c26e9e5",
+   "id": "c96c0887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "980354da",
+   "id": "6ab590e4",
    "metadata": {},
    "outputs": [],
    "source": []
