Added dimensioning parameters to multiSwitch widget

--- a/src/vois/vuetify/multiSwitchTest.ipynb
+++ b/src/vois/vuetify/multiSwitchTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "264c7ccc",
+   "id": "adb05b9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c96c0887",
+   "id": "696cbc53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example with minimal size buttons\n",
+    "%run multiSwitch.py\n",
+    "\n",
+    "from ipywidgets import widgets\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "def onchange(value):\n",
+    "    with output:\n",
+    "        print(value)\n",
+    "\n",
+    "\n",
+    "t = multiSwitch([True, True, False], ['TI', 'AB', 'KW'], managedblclick=True,\n",
+    "                tooltips=['Activate the search on paper title','Activate the search on paper abstract','Activate the search on paper keywords'], \n",
+    "                onchange=onchange, row=True, width=10, height=18, justify='start', color='blue', rounded=False, outlined=True,\n",
+    "                colorselected='#FFA300', colorunselected='#aaaaaa', paddingrow=1, paddingcol=0, tile=False, xsmall=True)\n",
+    "\n",
+    "display(widgets.HBox([v.Html(tag='div', children=['Search in:'], class_='pa-0 ma-0 mr-2'),t.draw()]))\n",
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdd1ad34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab590e4",
+   "id": "28fab5e3",
    "metadata": {},
    "outputs": [],
    "source": []
