--- a/src/vois/vuetify/datatableTest.ipynb
+++ b/src/vois/vuetify/datatableTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "391a5b7b",
+   "execution_count": 1,
+   "id": "066eba1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0f4e3558",
+   "execution_count": 2,
+   "id": "1d330eef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/venv/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3258: DtypeWarning: Columns (33) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv('https://raw.githubusercontent.com/owid/covid-19-data/master/public/data/owid-covid-data.csv')\n",
     "#df"
@@ -23,10 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d63a8b3e",
+   "execution_count": 5,
+   "id": "364ca7d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db8da9ff394540b08c58eef24db8d1d0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "datatable(color='green', dark=True, events=['cell_click', 'onicon'], font_size='12px', font_size_title='18px',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run datatable.py\n",
     "\n",
@@ -48,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f42abf3d",
+   "id": "469ced00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "514021af",
+   "id": "a7517300",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cf77c91",
+   "id": "43ad117d",
    "metadata": {},
    "outputs": [],
    "source": []
