--- a/src/vois/vuetify/multiSwitchTest.ipynb
+++ b/src/vois/vuetify/multiSwitchTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb05b9d",
+   "id": "37a92a5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,10 +28,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "696cbc53",
+   "execution_count": 1,
+   "id": "12b42f71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06f1a5120ee04898b831fa460b1cc774",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Html(children=['Search in:'], class_='pa-0 ma-0 mr-2', layout=None, tag='div'), Row(children=[H…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "113afa99f7c6471dad91ecbec0a42b77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Example with minimal size buttons\n",
     "%run multiSwitch.py\n",
@@ -56,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdd1ad34",
+   "id": "14f5a88e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28fab5e3",
+   "id": "840094f3",
    "metadata": {},
    "outputs": [],
    "source": []
