Added removeBasemaps parameter to basemaps widget

--- a/src/vois/vuetify/basemapsTest.ipynb
+++ b/src/vois/vuetify/basemapsTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0fbc8dd4",
+   "execution_count": 6,
+   "id": "5ed8586f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "08102255f3a344618c6616f4e2d32d25",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Card(children=[Html(children=[CustomTreeview(activatable=True, active=72, color='#f8bd1a', even…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Treeview to select the basemap for a ipyleaflet map instance\n",
     "from jeodpp import inter, imap\n",
@@ -18,7 +33,7 @@
     "m = imap.Map(layout=Layout(height='%dpx'%height))\n",
     "#m.layersControl()\n",
     "\n",
-    "b = basemaps(m, height=height, dark=False)\n",
+    "b = basemaps(m, height=height, dark=False, removeBasemaps=['OpenStreetMap.HOT', 'MtbMap'])\n",
     "\n",
     "widgets.HBox([b.draw(),m])"
    ]
@@ -26,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a54ebdd",
+   "id": "406570fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4b4100bd",
+   "execution_count": 2,
+   "id": "d6c805b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "447d4942",
+   "execution_count": 3,
+   "id": "d0a4edd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd93da43",
+   "id": "f0e59382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4453149",
+   "id": "3ca6f4ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9d737b8",
+   "id": "65298bbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6a72f04",
+   "id": "e5eb797a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8b56c84",
+   "id": "da36377a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faa79e99",
+   "id": "72b329e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09041ae1",
+   "id": "8ca956df",
    "metadata": {},
    "outputs": [],
    "source": []
