--- a/src/vois/vuetify/mainPageTest.ipynb
+++ b/src/vois/vuetify/mainPageTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cf30b2ae",
+   "execution_count": 4,
+   "id": "f9c349c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05c329c747914ee8b21dd2661c22b9e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2235096e9fc541febaa77bd7aca62c8a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run mainPage.py\n",
     "\n",
@@ -18,6 +47,8 @@
     "def onclick1():\n",
     "    with output:\n",
     "        print(\"Clicked Function 1\")\n",
+    "        \n",
+    "disclaimer = 'The contents of this viewer are intended solely for the use of the Commission and may not be reproduced, distributed, or communicated outside the Commission in any format without explicit prior written consent'\n",
     "    \n",
     "m = mainPage(title='mainPage demo',\n",
     "             subtitle='Showcase how easy is to create a front page for an app',\n",
@@ -28,8 +59,9 @@
     "             background_image=55,\n",
     "             #background_filter='grayscale(0.85)',\n",
     "             background_filter='blur(2px) brightness(1.2) contrast(0.7) sepia(0.05) saturate(1.2)',\n",
-    "             creditbox_opacity=0,\n",
-    "             text_color='#222222')\n",
+    "             creditbox_opacity=0, creditbox_toppercent=78, creditbox_heightpercent=22,\n",
+    "             text_color='#222222',\n",
+    "             disclaimer=disclaimer)\n",
     "\n",
     "m.addButton('Function 1',\n",
     "            #subtitle='Launch calculation of ...',\n",
@@ -45,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a20c9914",
+   "id": "e7a26f1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cba45e70",
+   "id": "1e029f55",
    "metadata": {},
    "outputs": [],
    "source": []
