Added editable flag to rangeSliderFloat

--- a/src/vois/vuetify/iconButtonTest.ipynb
+++ b/src/vois/vuetify/iconButtonTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f378f5c6",
+   "id": "68885700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfc38ef0",
+   "id": "4ee8ce35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.disabled = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d261cbd8",
    "metadata": {},
    "outputs": [],
    "source": []
