--- a/src/vois/vuetify/rangeSliderFloatTest.ipynb
+++ b/src/vois/vuetify/rangeSliderFloatTest.ipynb
@@ -2,41 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c9e1e9b7",
+   "execution_count": null,
+   "id": "5c178a9b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a40a5005835e4539935483c2f8402394",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Row(children=[Html(children=[''], class_='pa-0 ma-0 mt-4', layout=None, style_='', tag='div'), Html(children=[…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cd3114081e44bb482188e41d5335b99",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from ipywidgets import widgets\n",
+    "## from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "\n",
     "%run rangeSliderFloat.py\n",
@@ -48,46 +19,17 @@
     "        print(value)\n",
     "\n",
     "s = rangeSliderFloat(1.8, 2.5, text='Select pressure level:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=3,\n",
-    "                     resetbutton=False, showtooltip=True, onchange=onchange)\n",
+    "                     resetbutton=False, showtooltip=True, onchange=onchange, editable=True, editableWidth=80)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "0d250e2b",
+   "execution_count": null,
+   "id": "cc57315a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d5e491a647d4542973eec6ef0daddfb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Row(children=[Html(children=[''], class_='pa-0 ma-0 mt-4', layout=None, style_='', tag='div'), Html(children=[…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c4fc527fd7946879bc735031526f30f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -108,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "8fbdb684",
+   "execution_count": null,
+   "id": "a0d06c92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,42 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "5e05ea58",
+   "execution_count": null,
+   "id": "b0e57e75",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 62]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s.slider.v_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "5f217039",
+   "execution_count": null,
+   "id": "1efd3e36",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2.0, 2.498]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s.value"
    ]
@@ -171,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bacba49d",
+   "id": "a4f21642",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -179,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b6e757",
+   "id": "225df3e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -187,15 +107,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ef82fb7",
+   "id": "97a9dd9d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2784db2b",
+   "execution_count": null,
+   "id": "4dc4694a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d58e59ff",
+   "id": "fe011a11",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -213,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240db385",
+   "id": "8b9cb93f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "627120fd",
+   "id": "96d2cc58",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -244,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca05bfd1",
+   "id": "9f3e09e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73182f43",
+   "id": "2ac9dda2",
    "metadata": {},
    "outputs": [],
    "source": []
