Added on_input callback to popup widget

--- a/src/vois/downloadTest.ipynb
+++ b/src/vois/downloadTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e91d3773",
+   "execution_count": 1,
+   "id": "e92f4abd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "92d14c4688a045c1b5c356f496f7409b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', min_height='0px', min_width='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run download.py\n",
     "\n",
@@ -17,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "446ff091",
+   "execution_count": 4,
+   "id": "1be6fc6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83bfc191",
+   "id": "e6d6d064",
    "metadata": {},
    "outputs": [],
    "source": []
