--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,28 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2391ec2d",
+   "execution_count": null,
+   "id": "440df44b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "581f001f256f473fab5e5ad15b3507ff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Icon-only popup\n",
     "from vois.vuetify import treeview\n",
+    "\n",
+    "from ipywidgets import widgets\n",
+    "out = widgets.Output()\n",
+    "display(out)\n",
     "\n",
     "%run popup.py\n",
     "\n",
@@ -31,17 +20,22 @@
     "                                           rootName='All',\n",
     "                                           height='270px')\n",
     "\n",
+    "def on_input(data):\n",
+    "    with out:\n",
+    "        print(data)\n",
+    "\n",
     "p = popup(treecard, '', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, \n",
     "          rounded=True, outlined=False, margintop=0, text=True, buttonwidth=34, buttonheight=34, \n",
-    "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
+    "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:',\n",
+    "          show_close_button=True, on_input=on_input)\n",
     "\n",
     "p.draw()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "55768884",
+   "execution_count": null,
+   "id": "ef622407",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,28 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5e0bf388",
+   "execution_count": null,
+   "id": "f4f82527",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c70380bce074d0d99990c85ce380e03",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Text only popup\n",
     "from vois.vuetify import treeview\n",
+    "\n",
+    "from ipywidgets import widgets\n",
+    "out = widgets.Output()\n",
+    "display(out)\n",
     "\n",
     "%run popup.py\n",
     "\n",
@@ -79,8 +62,12 @@
     "                                           rootName='All',\n",
     "                                           height='270px')\n",
     "\n",
+    "def on_input(data):\n",
+    "    with out:\n",
+    "        print(data)\n",
+    "\n",
     "p = popup(treecard, 'Sector',popupheight=270, buttonheight=34, margintop=0,\n",
-    "          open_on_hover=True, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True)\n",
+    "          open_on_hover=True, close_on_click=False, close_on_content_click=False, title='Select a sector:', show_close_button=True, on_input=on_input)\n",
     "\n",
     "p.draw()"
    ]
@@ -88,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b03a61ae",
+   "id": "06539e57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f47264c",
+   "id": "dc2c32d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -125,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "046e29b4",
+   "id": "9ca03620",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -133,46 +120,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c96b91c",
+   "id": "b4813642",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7a83a88f",
+   "execution_count": null,
+   "id": "88dbad27",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cee3d85fdc044fdabdf3c6d8ac6e476",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27c12184226d44f5ac7cb0b488caec9f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Manage events\n",
     "from vois.vuetify import treeview\n",
@@ -205,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "510990b8",
+   "id": "34517f86",
    "metadata": {},
    "outputs": [],
    "source": []
