Move all the tests in a different folder

--- a/src/vois/vuetify/Tests/appExample1.ipynb
+++ b/src/vois/vuetify/Tests/appExample1.ipynb
@@ -2,23 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ff60387f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b1b58f586934735a526642eda3fb026",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dialog(children=[Card(children=[Output(layout=Layout(height='100vh', width='100vw'))], layout=None)], fullscre…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'vois'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexpress\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpx\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mipywidgets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m widgets, Layout, HTML\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvois\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvuetify\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m app, switch, datePicker\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvois\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m svgHeatmap, svgBubblesChart\n\u001b[1;32m     11\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../app.py\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'vois'"
+     ]
     }
    ],
    "source": [
@@ -32,7 +29,7 @@
     "from vois.vuetify import app, switch, datePicker\n",
     "from vois import svgHeatmap, svgBubblesChart\n",
     "\n",
-    "%run app.py\n",
+    "%run ../app.py\n",
     "\n",
     "# Click on a tab of the title\n",
     "def on_click_tab(arg):\n",
@@ -232,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
