Added properties to popup widget

--- a/src/vois/vuetify/popupTest.ipynb
+++ b/src/vois/vuetify/popupTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "440df44b",
+   "execution_count": 14,
+   "id": "57d28671",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e6926cd5dc042338a2c327779399858",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "14005f41783e448e9a2b87b1b1ac00ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[Card(children=[Row(children=[Html(children=['Select a sector:'], class_='pa-0 ma-1', layout=Non…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Icon-only popup\n",
     "from vois.vuetify import treeview\n",
@@ -24,7 +53,7 @@
     "    with out:\n",
     "        print(data)\n",
     "\n",
-    "p = popup(treecard, '', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, \n",
+    "p = popup(treecard, 'test', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, \n",
     "          rounded=True, outlined=False, margintop=0, text=True, buttonwidth=34, buttonheight=34, \n",
     "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:',\n",
     "          show_close_button=True, on_input=on_input)\n",
@@ -34,8 +63,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "1c90cb0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.text = \"new\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6c47555c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ebd8b68c52344c69c5a1625f732ea8c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Menu(children=[Card(children=[Card(children=[Html(children=[CustomTreeview(activatable=True, color='#f8bd1a', …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display\n",
+    "\n",
+    "%run popup.py\n",
+    "\n",
+    "def on_activated(item):\n",
+    "    p.text = item\n",
+    "    \n",
+    "sectors = ['S%d'%x for x in range(10)]\n",
+    "treecard = treeview.createTreeviewFromList(sectors,\n",
+    "                                           selectable=False,\n",
+    "                                           activatable=True,\n",
+    "                                           on_activated=on_activated,\n",
+    "                                           rootName='All',\n",
+    "                                           height='270px')\n",
+    "\n",
+    "p = popup(treecard, 'None', popupheight=270)\n",
+    "\n",
+    "display(p.draw())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ef622407",
+   "id": "1eefdd60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f82527",
+   "id": "0444f493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06539e57",
+   "id": "1d560d4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc2c32d2",
+   "id": "9b9e2fc3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -112,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca03620",
+   "id": "49e39df3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -120,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4813642",
+   "id": "84e559af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -128,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88dbad27",
+   "id": "a33ce90f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34517f86",
+   "id": "b4c3760e",
    "metadata": {},
    "outputs": [],
    "source": []
