--- a/src/vois/vuetify/uploadTest.ipynb
+++ b/src/vois/vuetify/uploadTest.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5748abeb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from ipywidgets import widgets\n",
@@ -118,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
